style.css
body {
  font-family: 'Rubik', sans-serif;
}

.grid {
  display: grid;
  width: 100vw;
  height: 100vh;
  grid-template-rows: 110px 650px 650px 100px;
  /*grid-template-columns: .25fr .25fr .25fr .25fr;*/
  grid-template-columns: repeat(4, 25vw);
}

.grid-project {
  height: 100vh;
  display: grid;
  grid-template-rows: 110px 850px 1500px 650px 530px 1150px 1350px 1500px 950px 100px;
  grid-template-columns: 1fr;
}

.grid-project-infoshop {
  height: 100vh;
  display: grid;
  grid-template-rows: 110px 850px 450px 1250px 390px 1450px 2000px 100px;
  grid-template-columns: 1fr;
}

.stripe {
  /*border-bottom: 20px solid #367960;*/
  background: #efe; /* For browsers that do not support gradients */
  grid-column-start: 1;
  grid-column-end: 5;
  display: inline;
  font-size: 2em;
  /*text-align: right;*/
  /*text-decoration: none;*/
}

a:visited, a:link {
  text-decoration: none;
  color: #333;
}

.content1 {
  background-color: orange;
  /*border-right: 3px solid #F78018;*/
  /*border: 9px solid #DA9473;*/
  grid-column-start: 1;
  grid-column-end: span 1;
  font-size: 2em;
  color: #fff;
  letter-spacing: 7px;
  padding: 0px 0 0 10px;
}

#smalltext {
  font-size: 15px;
  letter-spacing: 2px;
}

.content2 {
  /*border-left: 3px solid #eee;*/
  background-color: #FAE597;
  grid-column-start: 2;
  grid-column-end: span 1;
  /*padding: 30px 15px 0 55px;*/
}

.content2 h3, .content5 h3, .content7 h3 {
  text-align: right;
  font-size: 1.5em;
  /*color: #eee;*/
}

.content3 {
  /*border: 2px solid #ffcf23;*/
  background-color: #fff;
  grid-column-start: 3;
  grid-column-end: span 1;
}

.content4 {
  /*border: 4px solid white;*/
  background-color: #389E77;
  grid-column-start: 4;
  grid-column-end: span 1;
}

.content5 {
  background-color: #efe;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content6 {
  background-color: #fff;
  grid-column-start: 2;
  grid-column-end: span 1;
}

.content7 {
  background-color: antiquewhite;
  grid-column-start: 3;
  grid-column-end: span 1;
}

.content8 {
  /*background-color: #fff;*/
  grid-column-start: 4;
  grid-column-end: span 1;
}

#namespan {
  padding-left: 10px;
}

#titlespan {
  float: right;
  padding-right: 30px;
  color: darkorange;
  font-size: .8em;
}
/*
.fillings1 p {
  font-family: 'Oswald', sans-serif;
  font-size: 1.3em;
  padding: 10px 10px 10px 10px;
}*/

.hash, .infoshop, .blick {
  /*display: inline-block;*/
  /*flex-direction: column;*/
  /*justify-content: center;*/
  /*padding: 24px 10px 0px 35px;*/
}

.hash {
  padding: 25px 10px 0px 35px;
}

.infoshop {
  padding: 65px 0px 0px 20px;
}

.blick {
  padding: 55px 0px 0px 16px;

}


.project {
 font-family: 'Merriweather Sans', sans-serif;
}

.content1-hash {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 35px 0 0 0;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content2-hash {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 25px 30px 20px 30px;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content3-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 55px 160px 0 70px;
  display: inline-block;
}

.content3-hash-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 55px 160px 0 70px;
  display: inline-block;
}

.content3-hash img {
  float: left;
  padding: 0 100px 0 15px;
}

.content4-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 85px 160px 0 70px;
  /*display: inline-block;*/
}

.content4-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #FAE597;
  padding: 85px 160px 0 70px;
  /*display:flex;*/
  /*justify-content: flex-start;*/
  /*float: left;*/
}

.content4-hash img, .content3-blick img {
  float: left;
  padding: 40px 90px 0 15px;
}

.centerimage {
  padding: 65px 0 30px 0;
}

.content5-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 35px 10px 0 30px;
}

.content6-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 75px 70px 70px 30px;
  background-color: #48758A;
  color: #fff;
}

.content6-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 0px 70px 10px 30px;
  background-color: #fff;
  color: #222;
}

.content7-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 75px 70px 70px 30px;
}

.content7-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #F2F2F2;
  padding: 30px 70px 20px 30px;
}


.content8-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 35px 30px 0 30px;
}

.textbox {
  width: 55%;
  margin: auto;
}

.bottom.stripe {
  text-align: center;
  font-size: 1.4em;
}

.callout {
  color: darkorange;
}

/*For Responsive Front Page Images within Grid*/
#blick_section {
  display: inline-block;
    position: relative;
    width: 85%;
    left: 8%;
    margin-top: 65px;

}

#blick_inner {
  padding-top: 100%;
}

.blick_picdiv {
  background-image: url("images/Blick_iphone_sm.png");
  background-size: 95%;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 11;
}

#infoshop_section {
  display: inline-block;
    position: relative;
    width: 85%;
    left: 8%;
    margin-top: 65px;

}

#infoshop_inner {
  padding-top: 100%;
}

.infoshop_picdiv {
  background-image: url("images/sitemap_image_sm.png");
  background-size: 95%;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 11;
}

#hashtravel_section {
  display: inline-block;
    position: relative;
    width: 100%;
    left: 18%;
    margin-top: 30px;
}

#hashtravel_inner {
  padding-top: 100%;
}

.hashtravel_picdiv {
  background-image: url("images/HashHomepagePersp_sm.png");
  background-size: 65%;
  background-repeat: no-repeat;
  position: absolute;
  padding: 20px 0 20px 0;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 11;
}

#hashh3 {
  margin-top: 70px;
}

.pullquotes {
  font-size: 1.4em;
  padding: 20px 15px 0 15px;
  color: mediumblue;
}

